--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-uglify": "^0.7.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "jquery":"^2.2.4"
   }
 }
