--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "cakephp/migrations": "~1.0",
         "cakephp/plugin-installer": "*",
         "twbs/bootstrap": "^3.3",
-        "phpoffice/phpexcel": "dev-master"
+        "phpoffice/phpexcel": "^1.8"
     },
     "require-dev": {
         "psy/psysh": "@stable",
