--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
         "cakephp/plugin-installer": "*",
         "twbs/bootstrap": "^3.3",
         "phpoffice/phpexcel": "^1.8",
-        "setasign/fpdf": "1.8.1"
+        "setasign/fpdf": "1.8.1",
+        "mikey179/vfsStream": "^1.6"
     },
     "require-dev": {
         "psy/psysh": "@stable",
         "cakephp/debug_kit": "~3.2",
-        "cakephp/bake": "~1.1",
-        "mikey179/vfsStream": "~1"
+        "cakephp/bake": "~1.1"
     },
     "suggest": {
         "phpunit/phpunit": "Allows automated tests to be run without system-wide install.",
