--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /webroot/js/
 /config/Migrations/schema-dump-development.lock
 /src/userphotos/Testschool/
+/src/userphotos/de-ring-van-putten/
+/src/userphotos/Guido-de-Bres/
+/src/userphotos/unknown/
