--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "twbs/bootstrap": "^3.3",
         "phpoffice/phpexcel": "^1.8",
         "setasign/fpdf": "1.8.1",
-        "mikey179/vfsStream": "^1.6"
+        "mikey179/vfsStream": "^1.6",
+        "phpseclib/phpseclib": "^2.0"
     },
     "require-dev": {
         "psy/psysh": "@stable",
